# CEL_Events

./: README.md
client/events-app/: package.json  vite.config.js
client/events-app/src/: App.vue  main.js  style.css
client/events-app/src/components/: Calendar.vue  Events.vue
client/events-app/src/stores/: events.js
server/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
server/communityenergylabsserver/: cache.py  seed.py
server/communityenergylabsserver/flaskr/: __init__.py
server/communityenergylabsserver/models/: EventSchema.py
server/communityenergylabsserver/routes/: events.py
server/communityenergylabsserver/tests/: conftest.py  test_routes.py
server/data/: data.json
